clusters/production/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
          sticky:
            cookie:
              name: pihole_session
